2006-09-16  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-to-column): Revert 2006-08-03 change.

2006-09-16  Eli Zaretskii  <eliz@gnu.org>

	* help.el (describe-prefix-bindings): Use let, not let*.

2006-09-16  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-regexp, allout-line-boundary-regexp)
	(allout-bob-regexp): Correct grouping and boundaries to fix
	backwards traversal.
	(allout-depth-specific-regexp, allout-depth-one-regexp): New
	versions that exploit \\{M\\} regexp syntax, to avoid geometric or
	worse time in allout-ascend.
	(allout-doublecheck-at-and-shallower): Identify depth threshold
	below which topics are checked for and disqualified by containment
	discontinuities.
	(allout-hotspot-key-handler): Correctly handle multiple-key
	strokes.  Remove some unused variables.
	(allout-mode-leaders): Clarify that mode-specific comment-start
	will be used.
	(set-allout-regexp): Correctly regexp-quote allout regexps to
	properly accept alternative header-leads and primary bullets with
	regexp-specific characters (eg, C "/*", mathematica "(*").
	Include new regular expressions among those configured.
	(allout-infer-header-lead-and-primary-bullet): Rename
	allout-infer-header-lead.
	(allout-recent-depth): Manifest as a variable as well as a
	function.
	(allout-prefix-data): Simplify into an inline instead of a macro,
	assuming current match data rather than being explicitly passed
	it.  Establish allout-recent-depth value as well as
	allout-recent-prefix-beginning and allout-recent-prefix-end.
	(allout-aberrant-container-p): True when an item's immediate
	offspring discontinuously contained.  Useful for disqualifying
	unintended topic prefixes, likely at low depths.
	(allout-goto-prefix-doublechecked): Elaborated version of
	allout-goto-prefix which disqualifies aberrant pseudo-items.
	(allout-pre-next-prefix): Layer on top of lower-level routines, to
	get disqualification of aberrant containers.